export class Servico {
  id!: string;
  nome!: string;
  descricao!: string | null;
  preco!: number;
  created_at!: Date;
  updated_at!: Date;
}
